--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <footer>
-        <h4 style="color:#d9dcd6">Made with ❤️️ by Horiseon</h4>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
